adding in feature1

--- a/index2.html
+++ b/index2.html
@@ -5,3 +5,13 @@
     recur periodically through the history of zoology. However, the medical theories of Hippocrates and his followers,
     especially humorism, had a lasting impact.[6]
 </p>
+<p>
+    The philosopher Aristotle created the science of biology, basing its theory on both his metaphysical principles and
+    on observation. He proposed theories for the processes of metabolism, temperature regulation, information
+    processing, embryonic development and inheritance. He made detailed observations of nature, especially the habits
+    and attributes of animals in the sea at Lesbos. He classified 540 animal species, and dissected at least
+    50.[7][8][9]
+
+    Aristotle, and nearly all Western scholars after him until the 18th century, believed that creatures were arranged
+    in a graded scale of perfection rising from plants on up to humans: the scala naturae or Great Chain of Being.[10]
+</p>
